--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -30,206 +30,7 @@ dat <- read_csv("../data/collated_summary_data.csv")
 source("helper_functions_tables_figures.r") #Load functions to prep data for figures
 ```
 
-```{r transform_effect_and_compute_rma}
-#Transform effect sizes to raw correlations
-#'transform_MA' is a sourced function
-res <- dat %>% 
-  split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
-  map_dfr(transform_MA, .id = "effect") #apply function and transform back from list to dataframe
-
-#compute random effect meta-analysis of transformed effects
-#'summarizer' is a sourced function
-res2 <- res %>% 
-  split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
-  map_dfr(summarizer, .id = "effect") %>% 
-  mutate(r = abs(r)) #Absolute values since we are interested in effect size rather than direction
-```
-
-```{r cor_het_effect_size, results = "hide", cache=TRUE}
-#Basic correlations
-cor.test(res2$I2, res2$r) #pearson I2
-
-I2_fit <- summary(lm(I2 ~ r, data = res2)) #for annotating figures
-
-cor.test(res2$tau2, res2$r) #pearson tau2
-
-tau2_fit <- summary(lm(tau2 ~ r, data = res2))
-
-cor.test(res2$H2, res2$r) #pearson H2
-
-H2_fit <- summary(lm(H2 ~ r, data = res2))
-
-cor.test(res2$I2, res2$r, method = "spearman") #spearman
-
-##Excluding anchoring effects
-dropped_anchoring <- res2 %>%
-  filter(!grepl("Anchoring", effect))
-
-cor.test(dropped_anchoring$I2, dropped_anchoring$r) #pearson
-
-#bootstrap confidence intervals
-#code by Amir Abdol
-
-#I2
-pear <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ I2 + r, data=d)
-     return(fit$estimate)
-}
-
-bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + I2)
-
-I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
-
-spear <- function(formula, data, indices){ #spearman
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ I2 + r, data=d, method = "spearman")
-     return(fit$estimate)
-}
-
-options(warn=-1)
-bootfit <- boot(data=res2, statistic=spear, R=1000, formula= ~ r + I2)
-options(warn=0)
-
-I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
-
-#Excluding anchoring effects
-bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ r + I2)
-
-I2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
-
-
-#H2
-pear <- function(formula, data, indices){
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ H2 + r, data=d)
-     return(fit$estimate)
-}
-
-bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + H2)
-
-H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
-
-
-```
-
-
-```{r plot_res, cache = TRUE}
-
-#Plots of H2 and I2 vs. biserial correlation r for all effects together
-
-I2 <- ggplot(res2, aes(x = r, y = I2)) +
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  coord_cartesian(ylim = c(0, 100)) +
-  geom_text(x = 0.14, y = Inf, vjust = 7, fontface = "italic", size = 3.5, label = paste0("b = ", format(round(I2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(I2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  scale_y_continuous(name = expression(paste(italic(I)^2," index"))) +
-  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
-
-H2 <- ggplot(res2, aes(x = r, y = H2)) + 
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(H2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(H2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  scale_y_continuous(name = expression(paste(italic(H)^2," index", sep = ""))) +
-  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
-
-
-effect_het <- plot_grid(I2, H2, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
-effect_het
-#save_plot("../figures/effect-het.png", effect_het,
-#          nrow = 2, base_height = 5, base_width = 5, dpi = 600)
-
-
-```
-
-```{r r_vs_tau2, fig.asp = 0.618, cache = TRUE}
-r_tau2 <- ggplot(res2, aes(x = r, y = tau2)) + 
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
-  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
-
-r_tau2 
-# ggsave("../figures/r_tau2.png", dpi = 600, height =  4 , width = 6.47)
-
-```
-
-```{r corr_per_effect_type, cache = TRUE}
-#Each set of input datapoints is meta-analyzed as per the original replication project
-#Then correlated with tau2 per effect type
-#Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
-tau2_per_type <- dat %>% 
-  split(.$effect) %>%  
-  map_dfr(est_heterogen_smd_raw, .id = "effect")
-
-#effects that were transformed from OR to SMD
-OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
-           'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
-
-OR_fit <- function(x){ #fit rma to odds raios
-  fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
-  hetero <- confint(fit)$random[c(1, 3), ] 
-  data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
-             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
-
-fit_OR <- dat %>% 
-  filter(effect %in% OR2d) %>% 
-  split(.$effect) %>% 
-  map_dfr(OR_fit, .id = "effect")
-
-
-tau2_per_type <- dat %>% #This is to add the effect_type names
-  select(effect, effect_type) %>% 
-  distinct() %>% 
-  mutate(effect_type = recode(effect_type, 
-                              d = "Standardized Mean Difference",
-                              'Raw mean difference' = "Mean Difference",
-                              'Risk difference' = "Risk Difference",
-                              'r' = "Correlation")) %>% 
-  left_join(tau2_per_type) %>% 
-  filter(!effect %in% OR2d) %>% #drop old SMD converted OR
-  bind_rows(fit_OR) %>% #and instead add OR meta-analyzed as OR
-  mutate(effect_type = ifelse(is.na(effect_type), "Odds Ratio", effect_type),
-         eff_size = abs(eff_size)) #need the absolute values for plotting
-
-
-fitter <- function(df){ #function to fit correlations for annotating facet plots
- fit <- summary(lm(tau2 ~ eff_size, data = df))
- data.frame(b = format(round(fit$coefficients[2, 1], digits = 2), nsmall = 2), #because map_dfr requires dataframe
-            r = format(round(sqrt(fit$r.squared), digits = 2), nsmall = 2)) #output, the output is kept as two vars
-}
-
-labels <- tau2_per_type %>% 
-  split(.$effect_type) %>% 
-  map_dfr(fitter, .id = "effect_type") %>% 
-  mutate(lab = paste0("b = ", b, ", r = ", r)) #put output into one variable for improved plotting
-  
-
-    
-tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
-  geom_point(alpha = 0.5) +
-  geom_line(stat = "smooth", method = "lm", se = FALSE, color = "black", alpha = .5, linetype = "dashed") + #to set alpha for the line geom_line must be used rather than geom_smooth
-  geom_text(data = labels, aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 6, size = 3.5, fontface = "italic") + #hjust and vjust can be used to annotate the same position in all facets
-  scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
-  scale_x_continuous(name = "Effect size") +
-  theme_classic() +
-  theme(strip.background = element_blank(), #remove box around titles
-        strip.text = element_text(size = 12),
-        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
-                                    size = 0.5, linetype = "solid")) + 
-  facet_wrap(~effect_type, scales = "free") #use free scales since scales are different
-
-tau2_facet
-# ggsave("../figures/tau2_facet.png", dpi = 600, height =  7, width = 7)
-
-```
-
-
+##Figure 1
 ```{r Plot_tau_against_I2, fig.asp = 0.618, cache = TRUE}
 dat3 <- readRDS("../data/tau_simulation_results.RDS")
 names(dat3) <- sort(unique(dat$effect)) #names were alphabetized upon splitting in simulation so must sort
@@ -273,6 +74,7 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type)) +
 
 ```
 
+##Figure 2
 ```{r Density_plot, cache = TRUE}
 
 #1) I2 plot----
@@ -374,3 +176,209 @@ densities
 # save_plot("../figures/densities_het.png", densities,
      #      nrow = 2, base_height = 5, base_width = 5, dpi = 600)
 ```
+
+
+```{r transform_effect_and_compute_rma}
+#Transform effect sizes to raw correlations
+#'transform_MA' is a sourced function
+res <- dat %>% 
+  split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
+  map_dfr(transform_MA, .id = "effect") #apply function and transform back from list to dataframe
+
+#compute random effect meta-analysis of transformed effects
+#'summarizer' is a sourced function
+res2 <- res %>% 
+  split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
+  map_dfr(summarizer, .id = "effect") %>% 
+  mutate(r = abs(r)) #Absolute values since we are interested in effect size rather than direction
+```
+
+
+
+```{r cor_het_effect_size, results = "hide", cache=TRUE}
+#Basic correlations
+cor.test(res2$I2, res2$r) #pearson I2
+
+I2_fit <- summary(lm(I2 ~ r, data = res2)) #for annotating figures
+
+cor.test(res2$tau2, res2$r) #pearson tau2
+
+tau2_fit <- summary(lm(tau2 ~ r, data = res2))
+
+cor.test(res2$H2, res2$r) #pearson H2
+
+H2_fit <- summary(lm(H2 ~ r, data = res2))
+
+cor.test(res2$I2, res2$r, method = "spearman") #spearman
+
+##Excluding anchoring effects
+dropped_anchoring <- res2 %>%
+  filter(!grepl("Anchoring", effect))
+
+cor.test(dropped_anchoring$I2, dropped_anchoring$r) #pearson
+
+#bootstrap confidence intervals
+#code by Amir Abdol
+
+#I2
+pear <- function(formula, data, indices){ #pearson
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ I2 + r, data=d)
+     return(fit$estimate)
+}
+
+bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + I2)
+
+I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
+
+spear <- function(formula, data, indices){ #spearman
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ I2 + r, data=d, method = "spearman")
+     return(fit$estimate)
+}
+
+options(warn=-1)
+bootfit <- boot(data=res2, statistic=spear, R=1000, formula= ~ r + I2)
+options(warn=0)
+
+I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
+
+#Excluding anchoring effects
+bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ r + I2)
+
+I2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
+
+
+#H2
+pear <- function(formula, data, indices){
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ H2 + r, data=d)
+     return(fit$estimate)
+}
+
+bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + H2)
+
+H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
+
+
+```
+
+##Figure 3
+```{r plot_res, cache = TRUE}
+
+#Plots of H2 and I2 vs. biserial correlation r for all effects together
+
+I2 <- ggplot(res2, aes(x = r, y = I2)) +
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = TRUE, color = "black") +
+  coord_cartesian(ylim = c(0, 100)) +
+  geom_text(x = 0.14, y = Inf, vjust = 7, fontface = "italic", size = 3.5, label = paste0("b = ", format(round(I2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(I2_fit$r.squared), 2), nsmall = 2))) +
+  theme_classic() +
+  scale_y_continuous(name = expression(paste(italic(I)^2," index"))) +
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
+
+H2 <- ggplot(res2, aes(x = r, y = H2)) + 
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = TRUE, color = "black") +
+  geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(H2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(H2_fit$r.squared), 2), nsmall = 2))) +
+  theme_classic() +
+  scale_y_continuous(name = expression(paste(italic(H)^2," index", sep = ""))) +
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
+
+
+effect_het <- plot_grid(I2, H2, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
+effect_het
+#save_plot("../figures/effect-het.png", effect_het,
+#          nrow = 2, base_height = 5, base_width = 5, dpi = 600)
+
+
+```
+
+##Alternative/additional Figure 3
+```{r r_vs_tau2, fig.asp = 0.618, cache = TRUE}
+r_tau2 <- ggplot(res2, aes(x = r, y = tau2)) + 
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = TRUE, color = "black") +
+  geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
+  theme_classic() +
+  scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
+
+r_tau2 
+# ggsave("../figures/r_tau2.png", dpi = 600, height =  4 , width = 6.47)
+
+```
+
+##Correlations per effect type (alternative figure 3, probably drop)
+```{r corr_per_effect_type, cache = TRUE}
+#Each set of input datapoints is meta-analyzed as per the original replication project
+#Then correlated with tau2 per effect type
+#Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
+tau2_per_type <- dat %>% 
+  split(.$effect) %>%  
+  map_dfr(est_heterogen_smd_raw, .id = "effect")
+
+#effects that were transformed from OR to SMD
+OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
+           'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
+
+OR_fit <- function(x){ #fit rma to odds raios
+  fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
+  hetero <- confint(fit)$random[c(1, 3), ] 
+  data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
+             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
+
+fit_OR <- dat %>% 
+  filter(effect %in% OR2d) %>% 
+  split(.$effect) %>% 
+  map_dfr(OR_fit, .id = "effect")
+
+
+tau2_per_type <- dat %>% #This is to add the effect_type names
+  select(effect, effect_type) %>% 
+  distinct() %>% 
+  mutate(effect_type = recode(effect_type, 
+                              d = "Standardized Mean Difference",
+                              'Raw mean difference' = "Mean Difference",
+                              'Risk difference' = "Risk Difference",
+                              'r' = "Correlation")) %>% 
+  left_join(tau2_per_type) %>% 
+  filter(!effect %in% OR2d) %>% #drop old SMD converted OR
+  bind_rows(fit_OR) %>% #and instead add OR meta-analyzed as OR
+  mutate(effect_type = ifelse(is.na(effect_type), "Odds Ratio", effect_type),
+         eff_size = abs(eff_size)) #need the absolute values for plotting
+
+
+fitter <- function(df){ #function to fit correlations for annotating facet plots
+ fit <- summary(lm(tau2 ~ eff_size, data = df))
+ data.frame(b = format(round(fit$coefficients[2, 1], digits = 2), nsmall = 2), #because map_dfr requires dataframe
+            r = format(round(sqrt(fit$r.squared), digits = 2), nsmall = 2)) #output, the output is kept as two vars
+}
+
+labels <- tau2_per_type %>% 
+  split(.$effect_type) %>% 
+  map_dfr(fitter, .id = "effect_type") %>% 
+  mutate(lab = paste0("b = ", b, ", r = ", r)) #put output into one variable for improved plotting
+  
+
+    
+tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
+  geom_point(alpha = 0.5) +
+  geom_line(stat = "smooth", method = "lm", se = FALSE, color = "black", alpha = .5, linetype = "dashed") + #to set alpha for the line geom_line must be used rather than geom_smooth
+  geom_text(data = labels, aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 6, size = 3.5, fontface = "italic") + #hjust and vjust can be used to annotate the same position in all facets
+  scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
+  scale_x_continuous(name = "Effect size") +
+  theme_classic() +
+  theme(strip.background = element_blank(), #remove box around titles
+        strip.text = element_text(size = 12),
+        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
+                                    size = 0.5, linetype = "solid")) + 
+  facet_wrap(~effect_type, scales = "free") #use free scales since scales are different
+
+tau2_facet
+# ggsave("../figures/tau2_facet.png", dpi = 600, height =  7, width = 7)
+
+```
+
+
