--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -185,149 +185,9 @@ densities
 
 Figure 2. Simulated $I^2$ (a) and $/tau^2$ (b) densities across 37 effects for zero, small, medium, and large heterogeneity according to the definitions of Higgins (2003), and a histogram of the observed I2 estimates for the 37 effects. For panel b) effects consist of correlations and biserial correlation and heterogeneity levels were approximated by Fisher’s z values corresponding to Higgins’ definitions for the median sample size of 108. Each simulated density consists of approximately 370,000 estimates. 
 
-##Figure 3
-```{r transform_effect_and_compute_rma}
-#Transform effect sizes to biserial correlations (pearson's correlations as is)
-#then compute random effects meta-analyses per effect
-#'transform_MA' and 'summarizer' are sourced functions
-res <- dat %>% 
-  split(.$effect) %>%  #necessary step otherwise the function is applied overall
-  map(transform_MA) %>% #apply function each effect in the list
-  map_dfr(summarizer, .id = "effect") %>%  #apply function and transform to dataframe
-  mutate(r = abs(r)) #Absolute values since we are interested in effect size rather than direction
-```
 
-
-```{r cor_het_effect_size, results = "hide", cache=TRUE}
-#Basic correlations
-cor.test(res$I2, res$r) #pearson I2
-
-I2_fit <- summary(lm(I2 ~ r, data = res)) #for annotating figures
-
-cor.test(res$tau2, res$r) #pearson tau2
-
-tau2_fit <- summary(lm(tau2 ~ r, data = res))
-
-cor.test(res$H2, res$r) #pearson H2
-
-H2_fit <- summary(lm(H2 ~ r, data = res))
-
-cor.test(res$I2, res$r, method = "spearman") #spearman
-
-##Excluding anchoring effects
-dropped_anchoring <- res %>%
-  filter(!grepl("Anchoring", effect))
-
-cor.test(dropped_anchoring$I2, dropped_anchoring$r) #pearson
-
-#bootstrap confidence intervals
-#code by Amir Abdol
-
-#I2
-pear <- function(formula, data, indices){ #pearson
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ I2 + r, data=d)
-     return(fit$estimate)
-}
-
-bootfit <- boot(data=res, statistic=pear, R=1000, formula= ~ r + I2)
-
-I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
-
-spear <- function(formula, data, indices){ #spearman
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ I2 + r, data=d, method = "spearman")
-     return(fit$estimate)
-}
-
-options(warn=-1)
-bootfit <- boot(data=res, statistic=spear, R=1000, formula= ~ r + I2)
-options(warn=0)
-
-I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
-
-#Excluding anchoring effects
-bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ r + I2)
-
-I2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
-
-
-#H2
-pear <- function(formula, data, indices){
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ H2 + r, data=d)
-     return(fit$estimate)
-}
-
-bootfit <- boot(data=res, statistic=pear, R=1000, formula= ~ r + H2)
-
-H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
-
-#Tau2
-pear <- function(formula, data, indices){
-     d <- data[indices,]
-     fit <- cor.test(formula = ~ tau2 + r, data=d)
-     return(fit$estimate)
-}
-
-bootfit <- boot(data=res, statistic=pear, R=1000, formula= ~ r + tau2)
-
-tau2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
-
-```
-
-
-```{r plot_res, cache = TRUE}
-
-#Plots of H2 and I2 vs. biserial correlation r for all effects together, two above chunks need to be run first
-
-I2 <- ggplot(res, aes(x = r, y = I2)) +
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  coord_cartesian(ylim = c(0, 100)) +
-  annotate("text", x = 0.14, y = Inf, vjust = 5, fontface = "italic", size = 3.5, label = paste0("b = ", format(round(I2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(I2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  theme(axis.text.x = element_blank(), #drop x-axis labels in preparation for combining plots
-        axis.ticks.x = element_blank(),
-        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
-                                    size = 0.5, linetype = "solid")) +
-  scale_y_continuous(name = expression(paste(italic(I)^2," index"))) +
-  scale_x_continuous(name = NULL)
-
-H2 <- ggplot(res, aes(x = r, y = H2)) + 
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  annotate("text", x = 0.14, y = Inf, vjust = 5, size = 3.5, fontface = "italic", label = paste("b = ", format(round(H2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(H2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  theme(axis.text.x = element_blank(), #drop x-axis labels in preparation for combining plots
-        axis.ticks.x = element_blank(),
-        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
-                                    size = 0.5, linetype = "solid")) +
-  scale_y_continuous(name = expression(paste(italic(H)^2," index", sep = ""))) +
-  scale_x_continuous(name = NULL)
-
-tau2 <- ggplot(res, aes(x = r, y = tau2)) + 
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm", se = TRUE, color = "black") +
-  annotate("text", x = 0.14, y = Inf, vjust = 5, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
-  theme_classic() +
-  theme(panel.border = element_rect(fill = NA, colour = "black", #add box around plots
-                                    size = 0.5, linetype = "solid")) +
-  scale_y_continuous(name = expression(paste(italic(tau)^2, " estimate"))) +
-  scale_x_continuous(name = expression(paste("Biserial and Pearson's correlations ")))
-
-effect_het <- plot_grid(I2, H2, tau2, ncol = 1, align = "v", rel_heights = c(0.86, 0.86, 1), labels = c("a", "b", "c")) #combine plots
-effect_het
-# save_plot("../figures/effect-het.png", effect_het,
-         # ncol = 1, base_height = 7, base_width = 5, dpi = 600)
-
-
-```
-
-Figure 3. The correlation between a) I2 ,and effect size and b) H2 and c)  τ ̂^2and effect size for 37 effects from ten pre-registered multi-lab replication projects. Shaded bands represent 95% confidence intervals
-
-##Correlations per effect type (alternative figure 3, probably drop)
-```{r corr_per_effect_type, cache = TRUE}
+##Figure 3, correlations per effect type
+```{r corr_per_effect_type, cache = FALSE}
 #Each set of input datapoints is meta-analyzed as per the original replication project
 #Then correlated with tau2 per effect type
 #Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
@@ -340,7 +200,8 @@ MD_fit <- function(x){
     hetero <- confint(fit)$random[c(1, 3), ] 
     data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
              s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3],
+             H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
 }
 
 fisher_fit <- function(x){
@@ -348,7 +209,8 @@ fisher_fit <- function(x){
     hetero <- confint(fit)$random[c(1, 3), ] 
     data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
              s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3],
+             H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
     }
 
 #Raw mean differences to SMD
@@ -362,56 +224,47 @@ fisher <- dat %>%
   split(.$effect) %>% 
   map_dfr(fisher_fit, .id = "effect")
 
-#effects that were transformed from OR to SMD
+#effects that were transformed from OR to SMD by ML1 which we will drop
 OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
            'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
-
-#If we don't use the Odds ratios we don't need the below
-# OR_fit <- function(x){ #fit rma to odds raios
-#   fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
-#   hetero <- confint(fit)$random[c(1, 3), ] 
-#   data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
-#              s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-#              tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
-# 
-# fit_OR <- dat %>% 
-#   filter(effect %in% OR2d) %>% 
-#   split(.$effect) %>% 
-#   map_dfr(OR_fit, .id = "effect")
 
 
 tau2_per_type <- dat %>% #This is to add the effect_type names
   select(effect, effect_type) %>% 
-  distinct() %>% 
+  distinct() %>% #get unique rows
   mutate(effect_type = recode(effect_type, 
                               d = "Standardized Mean Difference")) %>% 
-  left_join(tau2_per_type) %>% 
+  left_join(tau2_per_type) %>% #Add the meta-analytic results
   filter(!effect %in% c(OR2d, MD_standardized$effect, fisher$effect)) %>% #drop old SMD converted OR, unstandardized MD and raw correlations
-  bind_rows(MD_standardized) %>% 
-  bind_rows(fisher) %>% 
+  bind_rows(MD_standardized) %>% #add MD after standardization
+  bind_rows(fisher) %>% #add correlations as fisher's z
   mutate(effect_type = ifelse(effect %in% MD_standardized$effect, "Standardized Mean Difference", effect_type),
          effect_type = ifelse(effect %in% fisher$effect, "Fisher's z", effect_type),
          eff_size = abs(eff_size)) %>% #need the absolute values for plotting
   filter(effect_type %in% c("Standardized Mean Difference", "Fisher's z"))
 
 
-fitter <- function(df){ #function to fit correlations for annotating facet plots
- fit <- summary(lm(tau2 ~ eff_size, data = df))
- data.frame(b = format(round(fit$coefficients[2, 1], digits = 2), nsmall = 2), #because map_dfr requires dataframe
-            r = format(round(sqrt(fit$r.squared), digits = 2), nsmall = 2)) #output, the output is kept as two vars
+fitter <- function(df){  #function to fit correlations for annotating facet plots
+ fit_tau2 <- summary(lm(tau2 ~ eff_size, data = df))
+ fit_I2 <- summary(lm(s_I2 ~ eff_size, data = df))
+ fit_H2 <- summary(lm(H2 ~ eff_size, data = df))
+ b <- c(fit_tau2$coefficients[2, 1], fit_I2$coefficients[2, 1], fit_H2$coefficients[2, 1])
+ r <- c(sqrt(fit_tau2$r.squared), sqrt(fit_I2$r.squared), sqrt(fit_H2$r.squared))
+ data.frame(b = format(round(b, digits = 2), nsmall = 2), #because map_dfr requires dataframe
+            r = format(round(r, digits = 2), nsmall = 2),
+            index = c("tau2", "I2", "H2")) #output, the output is kept as two vars
 }
 
-labels <- tau2_per_type %>% 
+labels <- tau2_per_type %>% #row 1:2 = tau2, row 3:4 = I2, row 5:6 = H2
   split(.$effect_type) %>% 
-  map_dfr(fitter, .id = "effect_type") %>% 
+  map_dfr(fitter, .id = "effect_type") %>%
   mutate(lab = paste0("b = ", b, ", r = ", r)) #put output into one variable for improved plotting
   
-
-    
+#tau2plot----
 tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
-  geom_text(data = labels, aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 6, size = 3.5, fontface = "italic") + #hjust and vjust can be used to annotate the same position in all facets
+  geom_text(data = labels[labels$index == "tau2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
   scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
   scale_x_continuous(name = "Effect size") +
   theme_classic() +
@@ -421,8 +274,146 @@ tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) +
                                     size = 0.5, linetype = "solid")) + 
   facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
 
-tau2_facet
-# ggsave("../figures/tau2_facet.png", dpi = 600, height =  7, width = 7)
+#I2plot----
+I2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = s_I2)) + 
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = TRUE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
+  geom_text(data = labels[labels$index == "I2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
+  scale_y_continuous(name = expression(paste(italic(I)^2, " Index"))) +
+  scale_x_continuous(name = "Effect size") +
+  coord_cartesian(ylim = c(0, 100)) +
+  theme_classic() +
+  theme(strip.background = element_blank(), #remove box around titles
+        strip.text = element_text(size = 12),
+        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
+                                    size = 0.5, linetype = "solid")) + 
+  facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
+
+#H2plot----
+H2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = H2)) + 
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = "lm", se = TRUE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
+  geom_text(data = labels[labels$index == "H2",], aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 2, size = 3.5, fontface = "italic", alpha = .6) + #hjust and vjust can be used to annotate the same position in all facets even though the scale are different
+  scale_y_continuous(name = expression(paste(italic(H)^2, " Index"))) +
+  scale_x_continuous(name = "Effect size") +
+  theme_classic() +
+  theme(strip.background = element_blank(), #remove box around titles
+        strip.text = element_text(size = 12),
+        panel.border = element_rect(fill = NA, colour = "black", #add box around plots
+                                    size = 0.5, linetype = "solid")) + 
+  facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
+
+#combined----
+combo <- cowplot::plot_grid(tau2_facet, I2_facet, H2_facet, labels = "AUTO")
+#ggsave("../figures/effect-het.png", dpi = 600, height =  7, width = 7)
+combo
+```
+
+Figure 3. The correlation between effect size and A) tau2, b) I2 and c) H2 respectively  22 effects that were measured as mean or standardized mean differences and 6 effects measured as correlations from ten pre-registered multi-lab replication projects. Effects reported as mean differences were standardized and correlations were transformed into Fisher’s z. Shaded bands represent 95% confidence intervals
+
+```{r cor_het_effect_size, results = "hide", cache=TRUE}
+
+#1. Standardized mean differences----
+SMDs <- tau2_per_type %>% filter(effect_type == "Standardized Mean Difference")
+
+cor.test(SMDs$tau2, SMDs$eff_size) #pearson tau2
+cor.test(SMDs$s_I2, SMDs$eff_size) #pearson I2
+cor.test(SMDs$H2, SMDs$eff_size) #pearson H2
+
+cor.test(SMDs$tau2, SMDs$eff_size, method = "spearman") #spearman
+cor.test(SMDs$s_I2, SMDs$eff_size, method = "spearman") #spearman
+cor.test(SMDs$H2, SMDs$eff_size, method = "spearman") #spearman
+
+
+##Excluding anchoring effects
+dropped_anchoring <- SMDs %>%
+  filter(!grepl("Anchoring", effect))
+
+cor.test(dropped_anchoring$s_I2, dropped_anchoring$eff_size) #pearson
+
+#bootstrap confidence intervals
+#code by Amir Abdol
+
+#1.1 I2 confidence intervals----
+pear <- function(formula, data, indices){ #pearson
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ s_I2 + eff_size, data=d)
+     return(fit$estimate)
+}
+
+bootfit <- boot(data=SMDs, statistic=pear, R=1000, formula= ~ eff_size + s_I2)
+I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
+
+
+#Excluding anchoring effects
+bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ eff_size + s_I2)
+
+I2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
+
+#1.2 Tau2 confidence intervals----
+pear <- function(formula, data, indices){
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ tau2 + eff_size, data=d)
+     return(fit$estimate)
+}
+
+bootfit <- boot(data=tau2_per_type, statistic=pear, R=1000, formula= ~ eff_size + tau2)
+
+tau2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
+
+#Excluding anchoring effects
+cor.test(dropped_anchoring$tau2, dropped_anchoring$eff_size)
+
+bootfit <- boot(data=dropped_anchoring, statistic=pear, R=1000, formula= ~ eff_size + tau2)
+
+tau2_dropped_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
+
+
+#1.3 H2 confidence intervals----
+pear <- function(formula, data, indices){
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ H2 + eff_size, data=d)
+     return(fit$estimate)
+}
+
+bootfit <- boot(data=tau2_per_type, statistic=pear, R=1000, formula= ~ eff_size + H2)
+
+H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
+
+
+
+#1.4 spearman bootstrap CIs----
+#First for I2
+spear <- function(formula, data, indices){ #spearman
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ s_I2 + eff_size, data=d, method = "spearman")
+     return(fit$estimate)
+}
+
+options(warn=-1)
+bootfit <- boot(data=tau2_per_type, statistic=spear, R=1000, formula= ~ eff_size + s_I2)
+options(warn=0)
+
+I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
+
+#Second for tau2
+spear <- function(formula, data, indices){ #spearman
+     d <- data[indices,]
+     fit <- cor.test(formula = ~ tau2 + eff_size, data=d, method = "spearman")
+     return(fit$estimate)
+}
+
+options(warn=-1)
+bootfit <- boot(data=tau2_per_type, statistic=spear, R=1000, formula= ~ eff_size + tau2)
+options(warn=0)
+
+tau2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
+
+#2. Fisher's z----
+fish <- tau2_per_type %>% filter(effect_type == "Fisher's z" )
+cor.test(fish$tau2, fish$eff_size) #pearson tau2
+cor.test(fish$s_I2, fish$eff_size) #pearson I2
+cor.test(fish$H2, fish$eff_size)
 
 ```
 
